[gd_scene load_steps=11 format=3 uid="uid://chmqacxx78lcw"]

[ext_resource type="Script" path="res://src/game/hud/inventory_hud.gd" id="1"]
[ext_resource type="FontFile" uid="uid://cn5qeqjqykham" path="res://fonts/connection_ii/ConnectionII.otf" id="2"]
[ext_resource type="Script" path="res://src/game/hud/inventory_slot.gd" id="3"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("2"), ExtResource("2")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="Gradient" id="2"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.54902, 0.54902, 0.54902, 0.901961)

[sub_resource type="GradientTexture2D" id="3"]
gradient = SubResource("2")
width = 80

[sub_resource type="Gradient" id="4"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.745098, 0.745098, 0.745098, 0.901961)

[sub_resource type="GradientTexture2D" id="5"]
gradient = SubResource("4")
width = 80

[sub_resource type="FontFile" id="6"]
fallbacks = Array[Font]([ExtResource("2"), ExtResource("2")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="7"]
fallbacks = Array[Font]([ExtResource("2"), ExtResource("2")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[node name="Inventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.054902, 0.054902, 0.054902, 0.627451)

[node name="Heading" type="Label" parent="."]
layout_mode = 0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -140.0
offset_bottom = -101.0
theme_override_fonts/font = SubResource("1")
text = "Inventory"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="InventorySlots" type="GridContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -90.5
offset_right = 175.0
offset_bottom = 90.5
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 4

[node name="Slot1" type="TextureButton" parent="InventorySlots"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
focus_mode = 0
button_mask = 3
texture_normal = SubResource("3")
texture_hover = SubResource("5")
script = ExtResource("3")

[node name="ItemImage" type="TextureRect" parent="InventorySlots/Slot1"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -40.0
scale = Vector2(2, 2)
mouse_filter = 2
stretch_mode = 4

[node name="Slot2" type="TextureButton" parent="InventorySlots"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
focus_mode = 0
button_mask = 3
texture_normal = SubResource("3")
texture_hover = SubResource("5")
script = ExtResource("3")

[node name="ItemImage" type="TextureRect" parent="InventorySlots/Slot2"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -40.0
scale = Vector2(2, 2)
mouse_filter = 2
stretch_mode = 4

[node name="Slot3" type="TextureButton" parent="InventorySlots"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
focus_mode = 0
button_mask = 3
texture_normal = SubResource("3")
texture_hover = SubResource("5")
script = ExtResource("3")

[node name="ItemImage" type="TextureRect" parent="InventorySlots/Slot3"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -40.0
scale = Vector2(2, 2)
mouse_filter = 2
stretch_mode = 4

[node name="Slot4" type="TextureButton" parent="InventorySlots"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
focus_mode = 0
button_mask = 3
texture_normal = SubResource("3")
texture_hover = SubResource("5")
script = ExtResource("3")

[node name="ItemImage" type="TextureRect" parent="InventorySlots/Slot4"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -40.0
scale = Vector2(2, 2)
mouse_filter = 2
stretch_mode = 4

[node name="Slot5" type="TextureButton" parent="InventorySlots"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
focus_mode = 0
button_mask = 3
texture_normal = SubResource("3")
texture_hover = SubResource("5")
script = ExtResource("3")

[node name="ItemImage" type="TextureRect" parent="InventorySlots/Slot5"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -40.0
scale = Vector2(2, 2)
mouse_filter = 2
stretch_mode = 4

[node name="Slot6" type="TextureButton" parent="InventorySlots"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
focus_mode = 0
button_mask = 3
texture_normal = SubResource("3")
texture_hover = SubResource("5")
script = ExtResource("3")

[node name="ItemImage" type="TextureRect" parent="InventorySlots/Slot6"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -40.0
scale = Vector2(2, 2)
mouse_filter = 2
stretch_mode = 4

[node name="Slot7" type="TextureButton" parent="InventorySlots"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
focus_mode = 0
button_mask = 3
texture_normal = SubResource("3")
texture_hover = SubResource("5")
script = ExtResource("3")

[node name="ItemImage" type="TextureRect" parent="InventorySlots/Slot7"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -40.0
scale = Vector2(2, 2)
mouse_filter = 2
stretch_mode = 4

[node name="Slot8" type="TextureButton" parent="InventorySlots"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
focus_mode = 0
button_mask = 3
texture_normal = SubResource("3")
texture_hover = SubResource("5")
script = ExtResource("3")

[node name="ItemImage" type="TextureRect" parent="InventorySlots/Slot8"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -40.0
scale = Vector2(2, 2)
mouse_filter = 2
stretch_mode = 4

[node name="ItemName" type="Label" parent="."]
layout_mode = 0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 110.0
offset_bottom = 135.0
theme_override_fonts/font = SubResource("6")
horizontal_alignment = 1

[node name="ItemDescription" type="Label" parent="ItemName"]
layout_mode = 0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 27.5
offset_bottom = 45.5
theme_override_fonts/font = SubResource("7")
horizontal_alignment = 1

[connection signal="gui_input" from="InventorySlots/Slot1" to="InventorySlots/Slot1" method="_on_Slot1_gui_input"]
[connection signal="mouse_entered" from="InventorySlots/Slot1" to="InventorySlots/Slot1" method="_on_Slot1_mouse_entered"]
[connection signal="mouse_exited" from="InventorySlots/Slot1" to="InventorySlots/Slot1" method="_on_Slot1_mouse_exited"]
[connection signal="gui_input" from="InventorySlots/Slot2" to="InventorySlots/Slot2" method="_on_Slot1_gui_input"]
[connection signal="mouse_entered" from="InventorySlots/Slot2" to="InventorySlots/Slot2" method="_on_Slot1_mouse_entered"]
[connection signal="mouse_exited" from="InventorySlots/Slot2" to="InventorySlots/Slot2" method="_on_Slot1_mouse_exited"]
[connection signal="gui_input" from="InventorySlots/Slot3" to="InventorySlots/Slot3" method="_on_Slot1_gui_input"]
[connection signal="mouse_entered" from="InventorySlots/Slot3" to="InventorySlots/Slot3" method="_on_Slot1_mouse_entered"]
[connection signal="mouse_exited" from="InventorySlots/Slot3" to="InventorySlots/Slot3" method="_on_Slot1_mouse_exited"]
[connection signal="gui_input" from="InventorySlots/Slot4" to="InventorySlots/Slot4" method="_on_Slot1_gui_input"]
[connection signal="mouse_entered" from="InventorySlots/Slot4" to="InventorySlots/Slot4" method="_on_Slot1_mouse_entered"]
[connection signal="mouse_exited" from="InventorySlots/Slot4" to="InventorySlots/Slot4" method="_on_Slot1_mouse_exited"]
[connection signal="gui_input" from="InventorySlots/Slot5" to="InventorySlots/Slot5" method="_on_Slot1_gui_input"]
[connection signal="mouse_entered" from="InventorySlots/Slot5" to="InventorySlots/Slot5" method="_on_Slot1_mouse_entered"]
[connection signal="mouse_exited" from="InventorySlots/Slot5" to="InventorySlots/Slot5" method="_on_Slot1_mouse_exited"]
[connection signal="gui_input" from="InventorySlots/Slot6" to="InventorySlots/Slot6" method="_on_Slot1_gui_input"]
[connection signal="mouse_entered" from="InventorySlots/Slot6" to="InventorySlots/Slot6" method="_on_Slot1_mouse_entered"]
[connection signal="mouse_exited" from="InventorySlots/Slot6" to="InventorySlots/Slot6" method="_on_Slot1_mouse_exited"]
[connection signal="gui_input" from="InventorySlots/Slot7" to="InventorySlots/Slot7" method="_on_Slot1_gui_input"]
[connection signal="mouse_entered" from="InventorySlots/Slot7" to="InventorySlots/Slot7" method="_on_Slot1_mouse_entered"]
[connection signal="mouse_exited" from="InventorySlots/Slot7" to="InventorySlots/Slot7" method="_on_Slot1_mouse_exited"]
[connection signal="gui_input" from="InventorySlots/Slot8" to="InventorySlots/Slot8" method="_on_Slot1_gui_input"]
[connection signal="mouse_entered" from="InventorySlots/Slot8" to="InventorySlots/Slot8" method="_on_Slot1_mouse_entered"]
[connection signal="mouse_exited" from="InventorySlots/Slot8" to="InventorySlots/Slot8" method="_on_Slot1_mouse_exited"]
